--- a/css3test/div2.html
+++ b/css3test/div2.html
@@ -1,3 +1,10 @@
+<!--
+ * @Author: liusimin
+ * @Date: 2020-10-26 15:43:11
+ * @LastEditors: your name
+ * @LastEditTime: 2021-04-07 11:51:30
+ * @Description: file content
+-->
 <!DOCTYPE html>
 <html lang="en">
 
@@ -10,6 +17,11 @@
             width: 249px;
             height: 249px;
             border: 1px solid #000000;
+            position: absolute;
+            bottom: 0;
+        }
+        body {
+           height: 2000px;
         }
     </style>
 </head>
