--- a/html基础/空白节点.html
+++ b/html基础/空白节点.html
@@ -1,3 +1,10 @@
+<!--
+ * @Author: liusimin
+ * @Date: 2020-11-17 18:28:33
+ * @LastEditors: your name
+ * @LastEditTime: 2021-04-12 11:09:23
+ * @Description: file content
+-->
 <!DOCTYPE html>
 <html lang="en">
 
@@ -6,19 +13,35 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <style>
-        .div {
-            border: 1px solid purple;
-        }
-        span{
-            margin: 100px;
-            border: 1px solid black;
-            line-height: 100px;
-        }
+
     </style>
 </head>
 
 <body>
-    <div class="div"><span>xxxxxxx</span></div>
+    <div id="content"
+        style="height:150px;line-height:150px;text-align:center; color: #fff;background-color:#ccc;font-size:80px;">
+    </div>
+
+    <script>
+        let num = 1;
+        let content = document.getElementById('content');
+
+        function count() {
+            content.innerHTML = num++;
+        };
+        function debounce(func, wait) {
+            let timer;
+            return function (...args) {
+                let _this_ = this;
+                if (timer) clearTimeout(timer);
+                timer = setTimeout(() => {
+                    func.apply(_this_, args)
+                }, wait);
+            }
+        }
+        content.onmousemove = debounce(count, 500);
+
+    </script>
 </body>
 
 </html>
