更新个人简历，删去开源项目展示

--- a/刘思民个人简历/个人简历.html
+++ b/刘思民个人简历/个人简历.html
@@ -2,10 +2,11 @@
 <html>
 <head>
 <meta charset='UTF-8'><meta name='viewport' content='width=device-width initial-scale=1'>
-<title>个人简历</title><link href='https://fonts.loli.net/css?family=Open+Sans:400italic,700italic,700,400&subset=latin,latin-ext' rel='stylesheet' type='text/css' /><style type='text/css'>html {overflow-x: initial !important;}:root { --bg-color:#ffffff; --text-color:#333333; --select-text-bg-color:#B5D6FC; --select-text-font-color:auto; --monospace:"Lucida Console",Consolas,"Courier",monospace; --title-bar-height:20px; }
+
+<link href='https://fonts.loli.net/css?family=Open+Sans:400italic,700italic,700,400&subset=latin,latin-ext' rel='stylesheet' type='text/css' /><style type='text/css'>html {overflow-x: initial !important;}:root { --bg-color:#ffffff; --text-color:#333333; --select-text-bg-color:#B5D6FC; --select-text-font-color:auto; --monospace:"Lucida Console",Consolas,"Courier",monospace; --title-bar-height:20px; }
 .mac-os-11 { --title-bar-height:28px; }
 html { font-size: 14px; background-color: var(--bg-color); color: var(--text-color); font-family: "Helvetica Neue", Helvetica, Arial, sans-serif; -webkit-font-smoothing: antialiased; }
-body { margin: 0px; padding: 0px; height: auto; bottom: 0px; top: 0px; left: 0px; right: 0px; font-size: 1rem; line-height: 1.42857; overflow-x: hidden; background: inherit; tab-size: 4; }
+body { margin: 0px; padding: 0px; height: auto; inset: 0px; font-size: 1rem; line-height: 1.42857; overflow-x: hidden; background: inherit; tab-size: 4; }
 iframe { margin: auto; }
 a.url { word-break: break-all; }
 a:active, a:hover { outline: 0px; }
@@ -66,7 +67,7 @@ div.hr:focus { cursor: none; }
 #write pre.ty-contain-cm { white-space: normal; }
 .CodeMirror-gutters { margin-right: 4px; }
 .md-fences { font-size: 0.9rem; display: block; break-inside: avoid; text-align: left; overflow: visible; white-space: pre; background: inherit; position: relative !important; }
-.md-diagram-panel { width: 100%; margin-top: 10px; text-align: center; padding-top: 0px; padding-bottom: 8px; overflow-x: auto; }
+.md-fences-adv-panel { width: 100%; margin-top: 10px; text-align: center; padding-top: 0px; padding-bottom: 8px; overflow-x: auto; }
 #write .md-fences.mock-cm { white-space: pre-wrap; }
 .md-fences.md-fences-with-lineno { padding-left: 0px; }
 #write.fences-no-line-wrapping .md-fences.mock-cm { white-space: pre; overflow-x: auto; }
@@ -91,6 +92,7 @@ blockquote > :first-child, li > :first-child { margin-top: 0px; }
   .typora-export #write { break-after: avoid; }
   .typora-export #write::after { height: 0px; }
   .is-mac table { break-inside: avoid; }
+  .typora-export-show-outline .typora-export-sidebar { display: none; }
 }
 .footnote-line { margin-top: 0.714em; font-size: 0.7em; }
 a img, img a { cursor: pointer; }
@@ -135,15 +137,6 @@ kbd { margin: 0px 0.1em; padding: 0.1em 0.6em; font-size: 0.8em; color: rgb(36, 
 .md-comment { color: rgb(162, 127, 3); opacity: 0.8; font-family: var(--monospace); }
 code { text-align: left; vertical-align: initial; }
 a.md-print-anchor { white-space: pre !important; border-width: initial !important; border-style: none !important; border-color: initial !important; display: inline-block !important; position: absolute !important; width: 1px !important; right: 0px !important; outline: 0px !important; background: 0px 0px !important; text-decoration: initial !important; text-shadow: initial !important; }
-.md-inline-math .MathJax_SVG .noError { display: none !important; }
-.html-for-mac .inline-math-svg .MathJax_SVG { vertical-align: 0.2px; }
-.md-math-block .MathJax_SVG_Display { text-align: center; margin: 0px; position: relative; text-indent: 0px; max-width: none; max-height: none; min-height: 0px; min-width: 100%; width: auto; overflow-y: hidden; display: block !important; }
-.MathJax_SVG_Display, .md-inline-math .MathJax_SVG_Display { width: auto; margin: inherit; display: inline-block !important; }
-.MathJax_SVG .MJX-monospace { font-family: var(--monospace); }
-.MathJax_SVG .MJX-sans-serif { font-family: sans-serif; }
-.MathJax_SVG { display: inline; font-style: normal; font-weight: 400; line-height: normal; zoom: 90%; text-indent: 0px; text-align: left; text-transform: none; letter-spacing: normal; word-spacing: normal; overflow-wrap: normal; white-space: nowrap; float: none; direction: ltr; max-width: none; max-height: none; min-width: 0px; min-height: 0px; border: 0px; padding: 0px; margin: 0px; }
-.MathJax_SVG * { transition: none 0s ease 0s; }
-.MathJax_SVG_Display svg { vertical-align: middle !important; margin-bottom: 0px !important; margin-top: 0px !important; }
 .os-windows.monocolor-emoji .md-emoji { font-family: "Segoe UI Symbol", sans-serif; }
 .md-diagram-panel > svg { max-width: 100%; }
 [lang="flow"] svg, [lang="mermaid"] svg { max-width: 100%; height: auto; }
@@ -154,14 +147,60 @@ iframe { max-width: 100%; width: 100%; border: none; }
 .highlight td, .highlight tr { border: 0px; }
 mark { background: rgb(255, 255, 0); color: rgb(0, 0, 0); }
 .md-html-inline .md-plain, .md-html-inline strong, mark .md-inline-math, mark strong { color: inherit; }
-mark .md-meta { color: rgb(0, 0, 0); opacity: 0.3 !important; }
+.md-expand mark .md-meta { opacity: 0.3 !important; }
+mark .md-meta { color: rgb(0, 0, 0); }
 @media print {
   .typora-export h1, .typora-export h2, .typora-export h3, .typora-export h4, .typora-export h5, .typora-export h6 { break-inside: avoid; }
 }
 .md-diagram-panel .messageText { stroke: none !important; }
 .md-diagram-panel .start-state { fill: var(--node-fill); }
 .md-diagram-panel .edgeLabel rect { opacity: 1 !important; }
+.md-require-zoom-fix { height: auto; margin-top: 16px; margin-bottom: 16px; }
 .md-require-zoom-fix foreignobject { font-size: var(--mermaid-font-zoom); }
+.md-fences.md-fences-math { font-size: 1em; }
+.md-fences-advanced:not(.md-focus) { padding: 0px; white-space: nowrap; border: 0px; }
+.md-fences-advanced:not(.md-focus) { background: inherit; }
+.typora-export-show-outline .typora-export-content { max-width: 1440px; margin: auto; display: flex; flex-direction: row; }
+.typora-export-sidebar { width: 300px; font-size: 0.8rem; margin-top: 80px; margin-right: 18px; }
+.typora-export-show-outline #write { --webkit-flex:2; flex: 2 1 0%; }
+.typora-export-sidebar .outline-content { position: fixed; top: 0px; max-height: 100%; overflow: hidden auto; padding-bottom: 30px; padding-top: 60px; width: 300px; }
+@media screen and (max-width: 1024px) {
+  .typora-export-sidebar, .typora-export-sidebar .outline-content { width: 240px; }
+}
+@media screen and (max-width: 800px) {
+  .typora-export-sidebar { display: none; }
+}
+.outline-content li, .outline-content ul { margin-left: 0px; margin-right: 0px; padding-left: 0px; padding-right: 0px; list-style: none; }
+.outline-content ul { margin-top: 0px; margin-bottom: 0px; }
+.outline-content strong { font-weight: 400; }
+.outline-expander { width: 1rem; height: 1.42857rem; position: relative; display: table-cell; vertical-align: middle; cursor: pointer; padding-left: 4px; }
+.outline-expander::before { content: ""; position: relative; font-family: Ionicons; display: inline-block; font-size: 8px; vertical-align: middle; }
+.outline-item { padding-top: 3px; padding-bottom: 3px; cursor: pointer; }
+.outline-expander:hover::before { content: ""; }
+.outline-h1 > .outline-item { padding-left: 0px; }
+.outline-h2 > .outline-item { padding-left: 1em; }
+.outline-h3 > .outline-item { padding-left: 2em; }
+.outline-h4 > .outline-item { padding-left: 3em; }
+.outline-h5 > .outline-item { padding-left: 4em; }
+.outline-h6 > .outline-item { padding-left: 5em; }
+.outline-label { cursor: pointer; display: table-cell; vertical-align: middle; text-decoration: none; color: inherit; }
+.outline-label:hover { text-decoration: underline; }
+.outline-item:hover { border-color: rgb(245, 245, 245); background-color: var(--item-hover-bg-color); }
+.outline-item:hover { margin-left: -28px; margin-right: -28px; border-left: 28px solid transparent; border-right: 28px solid transparent; }
+.outline-item-single .outline-expander::before, .outline-item-single .outline-expander:hover::before { display: none; }
+.outline-item-open > .outline-item > .outline-expander::before { content: ""; }
+.outline-children { display: none; }
+.info-panel-tab-wrapper { display: none; }
+.outline-item-open > .outline-children { display: block; }
+.typora-export .outline-item { padding-top: 1px; padding-bottom: 1px; }
+.typora-export .outline-item:hover { margin-right: -8px; border-right: 8px solid transparent; }
+.typora-export .outline-expander::before { content: "+"; font-family: inherit; top: -1px; }
+.typora-export .outline-expander:hover::before, .typora-export .outline-item-open > .outline-item > .outline-expander::before { content: "−"; }
+.typora-export-collapse-outline .outline-children { display: none; }
+.typora-export-collapse-outline .outline-item-open > .outline-children, .typora-export-no-collapse-outline .outline-children { display: block; }
+.typora-export-no-collapse-outline .outline-expander::before { content: "" !important; }
+.typora-export-show-outline .outline-item-active > .outline-item .outline-label { font-weight: 700; }
+.md-inline-math-container mjx-container { zoom: 0.95; }
 
 
 :root {
@@ -177,10 +216,11 @@ mark .md-meta { color: rgb(0, 0, 0); opacity: 0.3 !important; }
     /* open-sans-700italic - latin-ext_latin */
   html {
     font-size: 16px;
+    -webkit-font-smoothing: antialiased;
 }
 
 body {
-    font-family: "Open Sans","Clear Sans", "Helvetica Neue", Helvetica, Arial, sans-serif;
+    font-family: "Open Sans","Clear Sans", "Helvetica Neue", Helvetica, Arial, 'Segoe UI Emoji', sans-serif;
     color: rgb(51, 51, 51);
     line-height: 1.6;
 }
@@ -349,7 +389,7 @@ table {
     word-break: initial;
 }
 table tr {
-    border-top: 1px solid #dfe2e5;
+    border: 1px solid #dfe2e5;
     margin: 0;
     padding: 0;
 }
@@ -523,9 +563,9 @@ header, .context-menu, .megamenu-content, footer{
     color: #b4654d;
 }
 
-.html-for-mac .context-menu {
+/*.html-for-mac {
     --item-hover-bg-color: #E6F0FE;
-}
+}*/
 
 #md-notification .btn {
     border: 0;
@@ -533,6 +573,7 @@ header, .context-menu, .megamenu-content, footer{
 
 .dropdown-menu .divider {
     border-color: #e5e5e5;
+    opacity: 0.4;
 }
 
 .ty-preferences .window-content {
@@ -544,10 +585,23 @@ header, .context-menu, .megamenu-content, footer{
     background: #999;
 }
 
+.menu-item-container a.menu-style-btn {
+    background-color: #f5f8fa;
+    background-image: linear-gradient( 180deg , hsla(0, 0%, 100%, 0.8), hsla(0, 0%, 100%, 0)); 
+}
 
-</style>
+
+
+</style><title>个人简历</title>
 </head>
-<body class='typora-export os-windows'>
-<div id='write'  class=''><h1><a name="个人信息" class="md-header-anchor"></a><span>个人信息</span></h1><ul><li><span>姓名：</span><strong><span>刘思民</span></strong><img src='./img/证件照.jpg' style='float:right; width:120px;height:160 px; margin-right:48px;border:1px solid'/></li><li><span>硕士研究生（中国地质大学·北京） |  22年应届生 </span></li><li><span>GPA：3.76/4.0（专业前5%）</span></li><li><span>手机：18310511830</span></li><li><span>邮箱：</span><a href='mailto:794144013@qq.com' target='_blank' class='url'>794144013@qq.com</a></li><li><span>Github: </span><a href='https://github.com/liusimin0206' target='_blank' class='url'>https://github.com/liusimin0206</a></li></ul><h1><a name="专业技能" class="md-header-anchor"></a><span>专业技能</span></h1><ul><li><span>能够使用 HTML5 标签编写 </span><code>语义化</code><span>的页面</span></li><li><span>熟练使用CSS/SCSS、</span><code>文档流</code><span>，</span><code>盒模型</code><span>，flex/grid 布局定位</span></li><li><span>掌握 JavaScript，</span><code>ES6 语法</code><span>，DOM 操作，BOM，Ajax，跨域，闭包，</span><code>原型链</code><span>，</span><code>this</code><span>，面向对象，Promise的使用</span></li><li><span>掌握 </span><code>Vue</code><span> / </span><code>Vuex</code><span> / </span><code>Vue-Router</code><span> 的使用</span></li><li><span>有 Node.js 的使用经验</span></li><li><span>能够使用 </span><code>Webpack</code><span> 配置打包，npm 包管理机制</span></li><li><span>掌握 Git/GitHub 工作部署流程</span></li></ul><h1><a name="实习经历" class="md-header-anchor"></a><span>实习经历</span></h1><p><strong><span>公司</span></strong><span>：深兰科技（上海）有限公司 （北京AI研发中心 ）  </span><span style="color:#9fa3b0;font-size:13px;"><span>2020.09 - 至今</span></span></p><p><strong><span>职位</span></strong><span>：WEB前端开发实习生</span></p><p><strong><span>工作内容</span></strong><span>：</span></p><ol start='' ><li><span>与产品、UI进行方案与原型审核。</span></li><li><span>使用vue以及ui框架配合产品 UI 完成新页面的实现，以及研究并改善用户体验。</span></li><li><span>配合后台开发人员完成前后端数据交互任务，实现产品功能以及后期代码维护。</span></li></ol><h1><a name="开源项目及作品" class="md-header-anchor"></a><span>开源项目及作品</span></h1><h2><a name="flappybird游戏" class="md-header-anchor"></a><span>Flappybird游戏</span></h2><p><img src="./img/flappybird1.png" alt="image-20200516222054924" style="zoom: 33%;" /></p><h4><a name="使用技术" class="md-header-anchor"></a><span>使用技术</span></h4><p><span>Vue，JavaScript，SCSS，localStorage</span></p><h4><a name="项目概述" class="md-header-anchor"></a><span>项目概述</span></h4><p><strong><span>Web版的《Flappy Bird》</span></strong><span> flappybird 游戏中玩家控制一只小鸟，跨越由各种不同长度水管所组成的障碍。</span></p><h4><a name="主要工作" class="md-header-anchor"></a><span>主要工作</span></h4><ul><li><span>利用Photoshop进行图片的修改，如实现背景图无缝无限循环滚动。</span></li><li><span>封装小鸟组件，实现的行为有随计时器快慢上下循环飞行和扇动翅膀，一定程度上实现复用性。</span></li><li><span>采用矩形与矩形的碰撞检测算法实现碰撞检测。</span></li><li><span>使用本地存储技术（localStorage）记录游戏数据，比如分数最高分的记录等。</span></li><li><span>页面布局考虑到不同设备，移动端和pc端均有较好体验。</span></li></ul><p><span> </span><a href='https://github.com/liusimin0206/flappybirdGame'><strong><span>GitHub 地址</span></strong></a><span>     </span><a href='https://liusimin0206.github.io/flappybirdGame/'><strong><span>作品链接</span></strong></a></p><h2><a name="兴凯湖国家地质公园地质遗迹数据管理系统demo）" class="md-header-anchor"></a><span>兴凯湖国家地质公园地质遗迹数据管理系统（demo）</span></h2><p><img src="./img/xingkaihu1.png" alt="image-20200516222054911" style="zoom: 33%;" /></p><h4><a name="功能描述" class="md-header-anchor"></a><span>功能描述</span></h4><p><span>兴凯湖国家地质公园地质遗迹数据管理系统旨在实现水体检测、土壤采样等环境数据与地图相结合，通过网页的方式在地图上进行展示，表达采样点的分布状况和数据的表格化展示。</span></p><h4><a name="主要工作-n323" class="md-header-anchor"></a><span>主要工作</span></h4><ul><li><span>Vue-router:前端路由，实现不刷新加载页面</span></li><li><span>Axios:前后端交互，可向服务器发送get请求，获取水体检测、土壤采样等环境数据，并将其展示在页面上</span></li></ul><p><span> </span><a href='https://github.com/liusimin0206/Xingkaihu'><strong><span>GitHub 地址</span></strong></a><span>     </span><a href='https://liusimin0206.github.io/Xingkaihu/#/showMap?currentTable=%E5%9C%B0%E4%B8%8B%E6%B0%B4%E6%A0%B7%E9%87%87%E9%9B%86%E8%AE%B0%E5%BD%95'><strong><span>作品链接</span></strong></a></p></div>
+<body class='typora-export os-windows'><div class='typora-export-content'>
+<div id='write'  class=''><h1 id='个人信息'><span>个人信息</span></h1><ul><li><span>姓名：</span><strong><span>刘思民</span></strong><img src='./img/证件照.jpg' style='float:right; width:140px;height:183 px; margin-right:48px;border:1px solid'/></li><li><span>硕士研究生（中国地质大学·北京） |  22年应届生 </span></li><li><span>GPA：3.76/4.0（专业前5%）</span></li><li><span>手机：18310511830</span></li><li><span>邮箱：</span><a href='mailto:794144013@qq.com' target='_blank' class='url'>794144013@qq.com</a></li><li><span>Github: </span><a href='https://github.com/liusimin0206' target='_blank' class='url'>https://github.com/liusimin0206</a></li></ul><h1 id='专业技能'><span>专业技能</span></h1><ul><li><span>能够使用 HTML5 标签编写 </span><code>语义化</code><span>的页面</span></li><li><span>熟练使用CSS/SCSS、</span><code>文档流</code><span>，</span><code>盒模型</code><span>，flex/grid 布局定位</span></li><li><span>掌握 JavaScript，</span><code>ES6 语法</code><span>，DOM 操作，BOM，Ajax，闭包，</span><code>原型链</code><span>，</span><code>this</code><span>，面向对象，Promise的使用</span></li><li><span>掌握 </span><code>Vue</code><span> / </span><code>Vuex</code><span> / </span><code>Vue-Router</code><span> 的使用</span></li><li><span>有 Node.js 的使用经验</span></li><li><span>掌握 Git/GitHub 工作部署流程</span></li></ul><h1 id='实习经历'><span>实习经历</span></h1><p><strong><span>公司</span></strong><span>：深兰科技（上海）有限公司 （北京AI研发中心 ）  </span><span style="color:#9fa3b0;font-size:13px;"><span>2020.09 - 2021.08</span></span></p><p><strong><span>职位</span></strong><span>：WEB前端开发实习生</span></p><p><strong><span>工作内容</span></strong><span>：</span></p><ol start='' ><li><span>与产品、UI进行方案与原型审核。</span></li><li><span>使用vue以及ui框架配合产品 UI 完成新页面的实现，以及研究并改善用户体验。</span></li><li><span>配合后台开发人员完成前后端数据交互任务，实现产品功能以及后期代码维护。</span></li></ol><h2 id='项目经历'><span>项目经历</span></h2><h3 id='笔迹鉴定业务平台前端负责人-202106---202108'><span>笔迹鉴定业务平台前端负责人 </span><span style="color:#9fa3b0;font-size:13px;"><span>2021.06 - 2021.08</span></span></h3><p><span>项目描述：该平台是为上海市某派出所实现涉案人员笔迹数字化而开发的小型项目。主要功能有人员档案管理、案件管理以及笔迹鉴定与比对。本项目主要可分为三个模块：登录鉴权、笔迹鉴定、样本库管理。该项目的前端部分主要由本人独立完成。</span></p><ol start='' ><li><span>与产品、UI进行方案与原型审核。</span></li><li><span>使用vue以及ui框架配合产品 UI 完成新页面的实现，以及研究并改善用户体验。</span></li><li><span>配合后台开发人员完成前后端数据交互任务，实现产品功能以及后期代码维护。</span></li><li><span>一个月内完成平台的一期需求并交付，两周完成二期需求，交付后部署。</span></li></ol><p><span>主要技术栈：vue、UI框架： view-design、DOM、axios、websocket、vue-simple-uploader</span></p><h3 id='深延公司官网-202101---202104'><span>深延公司官网 </span><span style="color:#9fa3b0;font-size:13px;"><span>2021.01 - 2021.04</span></span></h3><p><span>项目描述：官网PC端和移动端</span>
+<span>工作内容：开发包括首页、应用场景、新闻中心、关于我们、加入我们以及公司其他平台的介绍页等页面</span>
+<span>根据原型图和UI设计稿实现符合产品需求的页面</span>
+<span>主要技术栈：vue、UI框架： view-design（PC端）、vant（移动端）、DOM、flex、axios</span></p><h3 id='深延公司官网后台-202012---202102'><span>深延公司官网后台 </span><span style="color:#9fa3b0;font-size:13px;"><span>2020.12 - 2021.02</span></span></h3><p><span>项目描述：主要负责对访客信息以及他触发的事件经行统计、管理以及可视化展示</span>
+<span>工作内容：开发包括全站分析、数据中心、咨询管理等页面，根据原型图和UI设计稿实现符合产品需求的页面,熟悉了 echarts 可视化图形工具的使用</span></p><p><span>主要技术栈：vue、UI框架： view-design、echarts、axios</span></p><h3 id='智能数据标注平台-202011---202101'><span>智能数据标注平台 </span><span style="color:#9fa3b0;font-size:13px;"><span>2020.11 - 2021.01</span></span></h3><p><span>工作内容：利用echarts完成管理员和标注员的工作数据总览页面的开发</span>
+<span>主要技术栈：vue、UI框架：view-design、echarts、axios</span></p><h3 id='ai开放平台-202009---202012'><span>AI开放平台 </span><span style="color:#9fa3b0;font-size:13px;"><span>2020.09 - 2020.12</span></span></h3><p><span>项目描述：是面向行业用户与生态合作伙伴打造的一站式AI模型开发和应用平台。</span>
+<span>工作内容：负责文档中心页面的开发与维护，最后按照需求开发通用文档以便后台进行直接上传部署</span>
+<span>主要技术栈：vue、UI框架：ant-design-vue、vue-router</span></p></div></div>
 </body>
 </html>
